*--Changelog--*

4/16/2020
- Seen / Unseen message
- new SearchActivity
- Database improve, create chatlist to show in ChatsFragment
- Login/Register progressing response (prevent users click button many times)
4/18/2020
- Notification
4/19/2020
- Profile Activity
- Build SearchActivity instead SearchFragment
                                                   + use card view for search result
                                                   + improve search box and search result
                                                   + search keyboard layout and ActionListener
4/20/2020
- Notify unread number on chatlist
- Dont send noti of that user while chatting with that user
4/22/2020
- Update some UI

4/23/2020
- phone authentication
- new profile activity
    + driver license verification
    + add car to id (max 3)

4/26/2020
- show own cars on profile activity

4/27/2020
- add auto complete text view province to AddCarDialog
- add color spinner to AddCarDialog
- Change Style "Add" and "Cancle" Button in AddCarDialog