@@ -3,14 +3,14 @@ package com.cs.tu.caruserapp.Model;
 public class User {
 
     private String id;
-    private String carid;
+    private String active_carid;
     private String username;
     private String imageURL;
     private String search_name;
 
-    public User(String id, String username, String imageURL, String search_name, String carid) {
+    public User(String id, String username, String imageURL, String search_name, String active_carid) {
         this.id = id;
-        this.carid = carid;
+        this.active_carid = active_carid;
         this.username = username;
         this.imageURL = imageURL;
         this.search_name = search_name;
@@ -48,11 +48,11 @@ public class User {
 
     public void setSearch_name(String search_name) { this.search_name = search_name; }
 
-    public String getCarid() {
-        return carid;
+    public String getActive_carid() {
+        return active_carid;
     }
 
-    public void setCarid(String carid) {
-        this.carid = carid;
+    public void setActive_carid(String active_carid) {
+        this.active_carid = active_carid;
     }
 }
