@@ -1,15 +1,21 @@
 package com.cs.tu.caruserapp;
 
 import androidx.annotation.NonNull;
+import androidx.annotation.Nullable;
 import androidx.appcompat.app.AppCompatActivity;
 import androidx.appcompat.widget.Toolbar;
 import androidx.fragment.app.DialogFragment;
 import androidx.recyclerview.widget.LinearLayoutManager;
 import androidx.recyclerview.widget.RecyclerView;
 
+import android.app.ProgressDialog;
+import android.content.ContentResolver;
+import android.content.Intent;
+import android.net.Uri;
 import android.os.Bundle;
 import android.util.Log;
 import android.view.View;
+import android.webkit.MimeTypeMap;
 import android.widget.TextView;
 import android.widget.Toast;
 
@@ -18,7 +24,9 @@ import com.cs.tu.caruserapp.Adapter.CarAdapter;
 import com.cs.tu.caruserapp.Dialog.AddCarDialog;
 import com.cs.tu.caruserapp.Model.Car;
 import com.cs.tu.caruserapp.Model.User;
+import com.google.android.gms.tasks.Continuation;
 import com.google.android.gms.tasks.OnCompleteListener;
+import com.google.android.gms.tasks.OnFailureListener;
 import com.google.android.gms.tasks.Task;
 import com.google.firebase.auth.FirebaseAuth;
 import com.google.firebase.auth.FirebaseUser;
@@ -28,6 +36,10 @@ import com.google.firebase.database.DatabaseReference;
 import com.google.firebase.database.FirebaseDatabase;
 import com.google.firebase.database.Query;
 import com.google.firebase.database.ValueEventListener;
+import com.google.firebase.storage.FirebaseStorage;
+import com.google.firebase.storage.StorageReference;
+import com.google.firebase.storage.StorageTask;
+import com.google.firebase.storage.UploadTask;
 
 import java.util.ArrayList;
 import java.util.HashMap;
@@ -53,6 +65,11 @@ public class ProfileActivity extends AppCompatActivity implements AddCarDialog.O
     DatabaseReference reference;
     FirebaseUser firebaseUser;
 
+    StorageReference storageReference;
+    private static final int IMAGE_REQUEST = 1;
+    private Uri imageUri;
+    private StorageTask uploadTask;
+
     @Override
     protected void onCreate(final Bundle savedInstanceState) {
         super.onCreate(savedInstanceState);
@@ -76,6 +93,8 @@ public class ProfileActivity extends AppCompatActivity implements AddCarDialog.O
             }
         });
 
+        storageReference = FirebaseStorage.getInstance().getReference("uploads");
+
         firebaseUser = FirebaseAuth.getInstance().getCurrentUser();
         reference = FirebaseDatabase.getInstance().getReference("Users").child(firebaseUser.getUid());
 
@@ -96,6 +115,16 @@ public class ProfileActivity extends AppCompatActivity implements AddCarDialog.O
             }
         });
 
+        image_profile.setOnClickListener(new View.OnClickListener() {
+            @Override
+            public void onClick(View v) {
+                openImage();
+            }
+        });
+
+
+
+
         //get your owner cars from database and show on recyclerView
         carsList = new ArrayList<>();
 
@@ -114,7 +143,15 @@ public class ProfileActivity extends AppCompatActivity implements AddCarDialog.O
                 //can't add more than 3 cars
                 if(carsList.size() >= 3){
                     txt_add_car.setVisibility(View.GONE);
+                    txt_add_car.setOnClickListener(new View.OnClickListener() {
+                        @Override
+                        public void onClick(View v) {
+                            Toast.makeText(ProfileActivity.this, "Can't add more than three cars", Toast.LENGTH_SHORT).show();
+
+                        }
+                    });
                 }else{
+                    txt_add_car.setVisibility(View.VISIBLE);
                     txt_add_car.setOnClickListener(new View.OnClickListener() {
                         @Override
                         public void onClick(View v) {
@@ -127,7 +164,6 @@ public class ProfileActivity extends AppCompatActivity implements AddCarDialog.O
 
             }
 
-
             @Override
             public void onCancelled(@NonNull DatabaseError databaseError) {
 
@@ -139,18 +175,18 @@ public class ProfileActivity extends AppCompatActivity implements AddCarDialog.O
     private void addCar(final String car_id, final String province, final String car_brand, final String car_model, final String car_color){
 
         firebaseUser = FirebaseAuth.getInstance().getCurrentUser();
-        DatabaseReference reference = FirebaseDatabase.getInstance().getReference("Cars").child(car_id);
+        DatabaseReference reference = FirebaseDatabase.getInstance().getReference();
 
         HashMap<String, String> hashMap = new HashMap<>();
-        hashMap.put("car_id", car_id);
+        hashMap.put("car_id", car_id.toLowerCase());
         hashMap.put("province", province);
-        hashMap.put("brand", car_brand);
-        hashMap.put("model", car_model);
+        hashMap.put("brand", car_brand.substring(0, 1).toUpperCase() + car_brand.substring(1));
+        hashMap.put("model", car_model.substring(0, 1).toUpperCase() + car_model.substring(1));
         hashMap.put("color", car_color);
         hashMap.put("imageURL", "default");
         hashMap.put("owner_id", firebaseUser.getUid());
 
-        reference.setValue(hashMap).addOnCompleteListener(new OnCompleteListener<Void>() {
+        reference.child("Cars").push().setValue(hashMap).addOnCompleteListener(new OnCompleteListener<Void>() {
             @Override
             public void onComplete(@NonNull Task<Void> task) {
                 Toast.makeText(ProfileActivity.this, "Added car complete!", Toast.LENGTH_SHORT).show();
@@ -158,6 +194,99 @@ public class ProfileActivity extends AppCompatActivity implements AddCarDialog.O
             }
         });
 
+
+        Query query = FirebaseDatabase.getInstance().getReference("Cars").orderByChild("owner_id").equalTo(firebaseUser.getUid());
+        query.addValueEventListener(new ValueEventListener() {
+            int count_car = 0;
+            @Override
+            public void onDataChange(@NonNull DataSnapshot dataSnapshot) {
+                for(DataSnapshot snapshot : dataSnapshot.getChildren()){
+                    count_car++;
+                }
+                //force change active carid on first added car
+                if(count_car == 1){
+                    DatabaseReference active_car_reference = FirebaseDatabase.getInstance().getReference("Users").child(firebaseUser.getUid());
+                    HashMap<String, Object> map = new HashMap<>();
+                    map.put("active_carid", car_id);
+                    active_car_reference.updateChildren(map);
+
+                }
+
+            }
+
+            @Override
+            public void onCancelled(@NonNull DatabaseError databaseError) {
+
+            }
+        });
+
     }
 
+    private void openImage() {
+        Intent intent = new Intent();
+        intent.setType("image/*");
+        intent.setAction(Intent.ACTION_GET_CONTENT);
+        startActivityForResult(intent, IMAGE_REQUEST);
+    }
+
+    private String getFileExtension(Uri uri){
+        ContentResolver contentResolver = ProfileActivity.this.getContentResolver();
+        MimeTypeMap mimeTypeMap = MimeTypeMap.getSingleton();
+        return mimeTypeMap.getExtensionFromMimeType(contentResolver.getType(uri));
+    }
+
+    private void uploadImage(){
+        if(imageUri != null){
+            final StorageReference fileReference = storageReference.child(System.currentTimeMillis() + "." + getFileExtension(imageUri));
+
+            uploadTask = fileReference.putFile(imageUri);
+            uploadTask.continueWithTask(new Continuation<UploadTask.TaskSnapshot, Task<Uri>>() {
+                @Override
+                public Task<Uri> then(@NonNull Task<UploadTask.TaskSnapshot> task) throws Exception {
+                    if(!task.isSuccessful()){
+                        throw task.getException();
+                    }
+
+                    return fileReference.getDownloadUrl();
+                }
+            }).addOnCompleteListener(new OnCompleteListener<Uri>() {
+                @Override
+                public void onComplete(@NonNull Task<Uri> task) {
+                    if(task.isSuccessful()){
+                        Uri downloadUri = task.getResult();
+                        String mUri = downloadUri.toString();
+
+                        reference = FirebaseDatabase.getInstance().getReference("Users").child(firebaseUser.getUid());
+                        HashMap<String, Object> map = new HashMap<>();
+                        map.put("imageURL", mUri);
+                        reference.updateChildren(map);
+                    }else{
+                        Toast.makeText(ProfileActivity.this, "Failed!", Toast.LENGTH_SHORT).show();
+                    }
+                }
+            }).addOnFailureListener(new OnFailureListener() {
+                @Override
+                public void onFailure(@NonNull Exception e) {
+                    Toast.makeText(ProfileActivity.this, e.getMessage(), Toast.LENGTH_SHORT).show();
+                }
+            });
+        }else{
+            Toast.makeText(this, "No image selected", Toast.LENGTH_SHORT).show();
+        }
+    }
+
+    @Override
+    protected void onActivityResult(int requestCode, int resultCode, @Nullable Intent data) {
+        super.onActivityResult(requestCode, resultCode, data);
+
+        if(requestCode == IMAGE_REQUEST && resultCode == RESULT_OK && data != null && data.getData() != null){
+            imageUri = data.getData();
+
+            if(uploadTask != null && uploadTask.isInProgress()){
+                Toast.makeText(this, "Upload in progress", Toast.LENGTH_SHORT).show();
+            }else{
+                uploadImage();
+            }
+        }
+    }
 }
